fix: Ensure right-column on prop list does not overflow

--- a/src/components/PropList.module.scss
+++ b/src/components/PropList.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 30% 1fr;
+  grid-template-columns: 30% minmax(0, 1fr);
   grid-gap: 1rem;
 
   &:not(:last-child) {
